add code comment

--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_card"
     style="?attr/materialCardViewFilledStyle"
     android:layout_width="match_parent"
@@ -47,7 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/arbutus_slab"
-                    android:text="@string/placeholder_card_title"
+                    tools:text="Title"
                     android:textColor="@color/black"
                     android:textSize="@dimen/font_normal_size"
                     android:textStyle="bold" />
@@ -59,7 +60,8 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/voces"
                     android:maxLength="16"
-                    android:text="@string/placeholder_card_sub" />
+                    tools:text="subtitle"
+                    />
             </LinearLayout>
 
             <View
@@ -73,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:fontFamily="@font/bungee"
-                android:text="@string/placeholder_time"
+                tools:text="TIME"
                 android:textColor="@color/darksalmon"
                 android:textSize="@dimen/font_small_size" />
         </LinearLayout>
@@ -93,7 +95,7 @@
                 android:ellipsize="end"
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
-                android:text="@string/item_card_title"
+                tools:text="监听信息"
                 android:textSize="@dimen/font_super_large_size"
                 android:textStyle="bold" />
 
