--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Iseen" parent="Theme.Material3.Light.NoActionBar">
-        <item name="colorPrimary">@color/my_light_primary</item>
-        <item name="colorPrimaryDark">@color/transparent</item>
+        <item name="colorPrimary">@color/light_primary</item>
+        <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/aliceblue</item>
+        <item name="colorOnPrimaryContainer">@color/antiquewhite</item>
+        <item name="colorSecondary">@color/md_theme_light_secondaryContainer</item>
+        <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/light_primary_background</item>
+        <item name="colorOnSecondaryContainer">@color/light_primary</item>
+        <item name="android:statusBarColor">@color/transparent</item>
+        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
         <item name="android:forceDarkAllowed">false</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
