optimized some code and fixed some bugs.

--- a/app/src/main/res/layout/layout_snackbar_view.xml
+++ b/app/src/main/res/layout/layout_snackbar_view.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="30dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/snackbar_bag"
         android:minHeight="48dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_snackbar"
