--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,7 +57,6 @@
                     android:layout_marginStart="@dimen/view_margin_small_spacing"
                     android:layout_marginEnd="@dimen/view_margin_small_spacing"
                     android:layout_marginBottom="@dimen/view_margin_small_spacing"
-                    android:clickable="true"
                     android:orientation="vertical"
                     android:layout_margin="@dimen/view_margin_normal_spacing"
                     app:cardBackgroundColor="#6AFFFFFF"
@@ -285,7 +284,6 @@
                     android:layout_marginStart="@dimen/view_margin_small_spacing"
                     android:layout_marginEnd="@dimen/view_margin_small_spacing"
                     android:layout_marginBottom="@dimen/view_margin_small_spacing"
-                    android:clickable="true"
                     android:orientation="vertical"
                     android:layout_margin="@dimen/view_margin_normal_spacing"
                     app:cardBackgroundColor="#6AFFFFFF"
@@ -460,7 +458,8 @@
                             <ImageView
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
-                                android:src="@drawable/baseline_account_circle_24" />
+                                android:src="@drawable/baseline_account_circle_24"
+                                android:importantForAccessibility="no" />
 
                             <TextView
                                 android:layout_width="wrap_content"
