--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,29 +65,18 @@
                             android:text="@string/username"
                             android:textColor="@color/black"
                             android:textSize="@dimen/font_normal_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:ignore="RelativeOverlap" />
 
-                        <!--                <TextView-->
-                        <!--                    android:layout_width="wrap_content"-->
-                        <!--                    android:layout_height="wrap_content"-->
-                        <!--                    android:text="@string/uid"-->
-                        <!--                    android:textColor="@color/black"-->
-                        <!--                    android:layout_marginStart="55dp"-->
-                        <!--                    android:textSize="@dimen/font_small_size"-->
-                        <!--                    android:ellipsize="end"-->
-                        <!--                    android:maxEms="10"-->
-                        <!--                    android:maxLines="1"-->
-                        <!--                    android:layout_alignParentEnd="true"-->
-                        <!--                    />-->
-
-                        <!--                <TextView-->
-                        <!--                    android:layout_width="wrap_content"-->
-                        <!--                    android:layout_height="wrap_content"-->
-                        <!--                    android:text="@string/uid"-->
-                        <!--                    android:textSize="@dimen/font_small_size"-->
-                        <!--                    android:layout_marginStart="@dimen/view_margin_small_spacing"-->
-                        <!--                    android:layout_marginTop="@dimen/view_margin_small_spacing"-->
-                        <!--                    />-->
+                        <ImageButton
+                            android:id="@+id/btn_setting"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/baseline_settings_24"
+                            android:backgroundTint="@color/transparent"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            />
 
                     </RelativeLayout>
                 </com.google.android.material.card.MaterialCardView>
@@ -343,7 +332,8 @@
                     android:orientation="vertical"
                     app:cardElevation="2dp"
                     android:layout_margin="@dimen/view_margin_normal_spacing"
-                    app:cardBackgroundColor="@color/antiquewhite">
+                    app:cardBackgroundColor="@color/antiquewhite"
+                    android:id="@+id/login_warning_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -401,7 +391,8 @@
                     android:orientation="vertical"
                     app:cardElevation="2dp"
                     android:layout_margin="@dimen/view_margin_normal_spacing"
-                    app:cardBackgroundColor="@color/beige">
+                    app:cardBackgroundColor="@color/beige"
+                    android:id="@+id/tips">
 
                     <LinearLayout
                         android:layout_width="match_parent"
