--- a/app/src/main/res/layout/fragment_card_generator.xml
+++ b/app/src/main/res/layout/fragment_card_generator.xml
@@ -440,8 +440,29 @@
                             android:id="@+id/btn_login"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/view_margin_normal_spacing"
                             android:text="@string/login_qzone"
+                            />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="@dimen/font_small_size"
+                            android:background="@color/gray" />
+
+
+                        <Button
+                            android:id="@+id/btn_save"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/view_margin_normal_spacing"
+                            android:text="@string/save_template"
+                            />
+
+                        <Button
+                            android:id="@+id/btn_restore"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/fill_template"
                             />
 
                     </LinearLayout>
