--- a/app/src/main/res/layout/layout_history.xml
+++ b/app/src/main/res/layout/layout_history.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -64,37 +65,6 @@
                 android:layout_height="match_parent"
                 android:padding="@dimen/font_normal_size"
                 android:orientation="vertical">
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="@string/batch_operation"-->
-<!--                    android:textSize="@dimen/font_large_size"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    />-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/btn_del_all"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="@string/del_all_history_on_server"-->
-<!--                    android:layout_marginTop="@dimen/view_margin_normal_spacing"-->
-<!--                    />-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/btn_del_all_local"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="@string/del_all_history_on_local"-->
-<!--                    android:layout_marginTop="@dimen/view_margin_normal_spacing"-->
-<!--                    />-->
-
-<!--                <View-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="0.5dp"-->
-<!--                    android:layout_marginTop="@dimen/font_small_size"-->
-<!--                    android:background="@color/gray" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
